# internal/db/models.go
@@ -467,6 +467,15 @@ func (ns NullSeverity) Value() (driver.Value, error) {
 	return string(ns.Severity), nil
 }
 
+type AcceptedRisk struct {
+	ID         uuid.UUID `json:"id"`
+	ProjectID  uuid.UUID `json:"project_id"`
+	EntityID   uuid.UUID `json:"entity_id"`
+	RuleTypeID uuid.UUID `json:"rule_type_id"`
+	ExpiresAt  time.Time `json:"expires_at"`
+	CreatedAt  time.Time `json:"created_at"`
+}
+
 type AlertEvent struct {
 	ID           uuid.UUID        `json:"id"`
 	EvaluationID uuid.UUID        `json:"evaluation_id"`
